# local-rag

./: .gitignore  README.md  config.yaml  documents.py  embedding.py  main.py  parsers.py  pyproject.toml  rag.py  vector.py
local_rag/: __init__.py  embedding.py  llm.py  parsers.py  rag.py  utils.py
test/: test_documents.py  test_parsers.py  test_utils.py
