[project]
name = "localrag"
version = "0.1.0"
description = "Local Retrieval-Augmented Generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.1",
    "omegaconf>=2.3.0",
    "pypdf>=6.6.2",
    "pytest>=9.0.2",
    "sentence-transformers>=5.2.2",
    "torch>=2.10.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
